LOGICA: ( a medio terminar) logica para tablero e intercambios de textos de los jugadores) y logica de pantalla de resultado, ademmas puse un fondo que no es solo para que corra el programa.